SWAGAPI-135: Fix content alignment with scroll indicator icon

--- a/platforms/html5/src/styles/summaryv2.scss
+++ b/platforms/html5/src/styles/summaryv2.scss
@@ -278,13 +278,17 @@ $smallScreenWidth: 468px;
 }
 
 .swag-summary-v2__scroll-indicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-
   width: 100%;
   height: 2rem;
+
   background: linear-gradient(
     to top, 
     rgba(25, 90, 171, 0.7) 0%, 
